res/test/fortran/testfortran.err
Error in res/test/fortran/testfortran.f90 at line 6: Number of Unit declarations don't match
Error in res/test/fortran/testfortran.f90 at line 7: Number of Unit declarations don't match
Error in res/test/fortran/testfortran.f90 at line 32: Units don't match at .GT. operation. [X2 ]=m should be [ 0]=1 
